Fix quality gate (#4590)